# report_sider

./: .gitignore  CMakeLists.txt  ContentWidget.cpp  ContentWidget.h  MainWindow.cpp  MainWindow.h  convert_log.txt  generate_qm.bat  generate_ts.bat
config/: config.json  field_config.json  unit_config.json
models/: ElementModel.cpp  ImageElementModel.cpp  ImageElementModel.h
report_sider.dir/Debug/: report_sider.exe.recipe
report_sider.dir/Debug/report_sider.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  report_sider.lastbuildstate
res/: html.qrc  images.qrc  qss.qrc
res/html/: cover_page.html  geographic_info.html  image_property.html  instrument_info.html  qr_code_note.html  rule_area.html  summary_page.html  tag_note.html  temperature_difference_standard.html  temperature_measurement_parameters.html  temperature_measurement_results.html  text_note.html
res/qss/: InnerTip.qss  SpinBox.qss  business.qss
src/: main.cpp
src/global/: global.h
src/models/: ConfigModel.cpp  ConfigModel.h  ElementModel.cpp  ElementModel.h  FieldElementModel.cpp  FieldElementModel.h  GroupModel.cpp  GroupModel.h  HtmlElementModel.cpp  HtmlElementModel.h  ImageElementModel.cpp  Model.cpp  Model.h  UnitElementModel.cpp  UnitElementModel.h  UrlsElementModel.cpp  UrlsElementModel.h  model.cpp  model.h
src/utility/: utility.cpp  utility.h
src/view_models/: ElementViewModel.cpp  ElementViewModel.h  HtmlElementViewModel.cpp  HtmlElementViewModel.h  ImageElementViewModel.cpp  ImageElementViewModel.h  UrlsElementViewModel.cpp  UrlsElementViewModel.h
src/views/: ContentWidget.cpp  ContentWidget.h  FlowLayout.cpp  FlowLayout.h  HeaderBar.h  MainWindow.cpp  MainWindow.h  SystemTrayIcon.cpp  SystemTrayIcon.h
src/views/business_components/: ContentWidget.cpp  ContentWidget.h  Element.cpp  Element.h  ElementFrame.cpp  ElementFrame.h  FieldElement.cpp  FieldElement.h  FieldFrame.cpp  FieldFrame.h  GroupFrame.cpp  GroupFrame.h  MainWindow.cpp  MainWindow.h  SystemTrayIcon.cpp  SystemTrayIcon.h  TabFrame.cpp  TabFrame.h  TabPageFrame.cpp  TabPageFrame.h  ThermalImageIndex.cpp  ThermalImageIndex.h  UnitElement.cpp  UnitElement.h  UnitFrame.cpp  UnitFrame.h
src/views/business_components/draggable/: Draggable.cpp  Draggable.h
src/views/business_components/draggable/field_draggable/: FieldDraggable.cpp  FieldDraggable.h
src/views/business_components/draggable/unit_draggable/: CoverTableDraggable.cpp  CoverTableDraggable.h  GeographicInfoDraggable.cpp  GeographicInfoDraggable.h  ImageInfoDraggable.cpp  ImageInfoDraggable.h  ImageNoteDraggable.cpp  ImageNoteDraggable.h  InstrumentInfoDraggable.cpp  InstrumentInfoDraggable.h  LineTemperatureCurveDraggable.cpp  LineTemperatureCurveDraggable.h  NormalImageDraggable.cpp  NormalImageDraggable.h  QrCodeNoteDraggable.cpp  QrCodeNoteDraggable.h  RuleAreaDraggable.cpp  RuleAreaDraggable.h  SummaryTableDraggable.cpp  SummaryTableDraggable.h  TagNoteDraggable.cpp  TagNoteDraggable.h  TemperatureDifferenceStandardDraggable.cpp  TemperatureDifferenceStandardDraggable.h  TemperatureHistogramDraggable.cpp  TemperatureHistogramDraggable.h  TemperatureParametersDraggable.cpp  TemperatureParametersDraggable.h  TemperatureResultDraggable.cpp  TemperatureResultDraggable.h  TextNoteDraggable.cpp  TextNoteDraggable.h  ThermalImageDraggable.cpp  ThermalImageDraggable.h  UnitDraggable.cpp  UnitDraggable.h  VisibleLightDraggable.cpp  VisibleLightDraggable.h
src/views/business_components/element/: ElementFrame.cpp  ElementFrame.h  FieldDraggableElement.cpp  FieldDraggableElement.h  FieldElement.cpp  FieldElement.h  FieldElementFrame.cpp  FieldElementFrame.h  UnitElement.cpp  UnitElement.h  UnitElementFrame.cpp  UnitElementFrame.h
src/views/business_components/element/unit_element/: ImageInfoElement.cpp  ImageInfoElement.h  ImageNoteElement.cpp  ImageNoteElement.h  InstrumentInfoElement.cpp  InstrumentInfoElement.h  (+22 more)
src/views/business_components/elements/: Element.cpp  HtmlElement.cpp  HtmlElement.h  ImageElement.cpp  ImageElement.h  UrlsElement.cpp
src/views/business_components/group/: FieldGroupFrame.cpp  FieldGroupFrame.h  Group.cpp  Group.h  GroupFrame.cpp  GroupFrame.h  UnitGroupFrame.cpp  UnitGroupFrame.h
src/views/business_components/image_creator/: image_creator.cpp  image_creator.h
src/views/business_components/more_menu/: MoreMenu.cpp  MoreMenu.h
src/views/business_components/sub_group/: FieldSubGroupFrame.cpp  FieldSubGroupFrame.h  SubGroup.cpp  SubGroup.h  SubGroupFrame.cpp  SubGroupFrame.h
src/views/business_components/system_tray_icon/: SystemTrayIcon.cpp  SystemTrayIcon.h
src/views/business_components/tab/: FieldTabPage.cpp  FieldTabPage.h  FieldTabPageFrame.cpp  FieldTabPageFrame.h  Tab.cpp  Tab.h  TabFrame.cpp  TabFrame.h  TabPage.cpp  TabPage.h  TabPageFrame.cpp  TabPageFrame.h  UnitTabPage.cpp  UnitTabPage.h  UnitTabPageFrame.cpp  UnitTabPageFrame.h
src/views/business_components/thermal_image_index/: ThermalImageIndex.cpp  ThermalImageIndex.h
src/views/business_components/title_combine_widget/: ParameterTitleSelector.cpp  ParameterTitleSelector.h  RuleSequenceTitleSpinBox.cpp  RuleSequenceTitleSpinBox.h  RuleTypeTitleSelector.cpp  RuleTypeTitleSelector.h  TemperatureDifferenceTitleSelector.cpp  TemperatureDifferenceTitleSelector.h  TemperatureFeatureTitleSelector.cpp  TemperatureFeatureTitleSelector.h  TemplateTitleSelector.cpp  TemplateTitleSelector.h
src/views/common_components/: FlowLayout.cpp  FlowLayout.h  InnerTip.cpp  InnerTip.h  SpinBox.cpp  SpinBox.h  TitleLineEdit.cpp  TitleLineEdit.h  TitleSelector.cpp  TitleSelector.h  TitleSpinBox.cpp  TitleSpinBox.h
src/views/elements/: Element.cpp  HtmlElement.cpp  ImageElement.cpp  UrlsElement.cpp  UrlsElement.h
translations/: zh_CN.qm  zh_CN.ts
view_models/: ImageElementViewModel.cpp  ImageElementViewModel.h
views/: ContentWidget.cpp  ContentWidget.h
views/elements/: Element.cpp  Element.h
(+72 files in other folders)
